--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                 </div>
             </nav>
         </div>
-    </header>    <
-!-- Main Content -->
+    </header>    
+
     <main class="container mx-auto p-4">
         <!-- Home Section -->
         <section id="home-section" class="my-8">
