--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="flex items-center mb-4 md:mb-0">
                 <i class="fas fa-book-open text-2xl mr-3"></i>
                 <div>
-                    <h1 class="text-2xl font-bold">Trilhas Digitais de História</h1>
+                    <h1 class="text-2xl font-bold">Trilhas Digitais de História e LPT</h1>
                     <p class="text-sm opacity-90">Escola Januário E. de Lima - Cultivando saberes 🌱</p>
                     <p class="text-xs opacity-75">Prof. Sérgio Araújo 2025</p>
                 </div>
@@ -255,14 +255,14 @@
                 </button>
             </nav>
         </div>
-    </header>    <
-!-- Main Content -->
+    </header>    
+<!-- Main Content -->
     <main class="container mx-auto p-4">
         <!-- Home Section -->
         <section id="home-section" class="my-8">
             <!-- Welcome Section -->
             <div class="bg-white rounded-lg shadow-md p-6 mb-8">
-                <h2 class="text-3xl font-bold text-gray-800 mb-4">Bem-vindos às Trilhas Digitais de História</h2>
+                <h2 class="text-3xl font-bold text-gray-800 mb-4">Bem-vindos às Trilhas Digitais de Aprendizagem</h2>
                 <p class="text-gray-600 mb-6">
                     <strong>Selecione sua série abaixo para acessar as trilhas de aprendizagem disponíveis. 
                     Cada trilha contém atividades, recursos e desafios para aprofundar seus conhecimentos em História e LPT - Literatura e Produção Textual.</strong>
