--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                         <i class="fas fa-star text-3xl mb-2"></i>
                         <i class="fas fa-star text-3xl mb-2"></i>
                         <h3 class="text-xl font-bold">9º Ano</h3>
-                        <p class="text-sm mt-2">O princípio de uma nova caminhada</p>
+                        <p class="text-sm mt-2">A transição para novas aprendizagens</p>
                     </button>
                 </div>
             </div>
