--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                 <i class="fas fa-book-open text-2xl mr-3"></i>
                 <div>
                     <h1 class="text-2xl font-bold">Trilhas Digitais de Aprendizagem</h1>
-                    <p class="text-sm opacity-90">Escola Januário E. de Lima - Cultivando saberes 🌱</p>
-                    <p class="text-xs opacity-75">2025</p>
+                    <p class="text-sm opacity-90">Escola Januário E. de Lima - Cultivando saberes 🌱 2025</p>
+                    <p class="text-xs opacity-75"></p>
                 </div>
             </div>
             <nav class="flex items-center space-x-4">
