--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
     <footer class="bg-blue-800 text-white py-6 mt-12">
         <div class="container mx-auto px-4 text-center">
             <p class="mb-2">© 2025 Trilhas Digitais de História - Escola Januário E. de Lima</p>
-            <p class="text-sm opacity-75">Desenvolvido com ❤️ para a educação - Prof. Sérgio Araújo</p>
+            <p class="text-sm opacity-75">Desenvolvido com ❤️ para a educação</p>
         </div>
     </footer>
     <script>
