--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                         <!-- Português -->
                         <div class="bg-white rounded-lg shadow-sm p-4 hover:shadow-md transition-shadow duration-200 card-enhanced">
                             <div class="flex items-start">
-                                <img src="https://web2.nekoweb.org/novastrilhas/portugues.jpg" alt="Português" class="w-20 h-20 rounded mr-4 object-cover">
+                                <img src="https://github.com/zonaeducacional/trilhas/blob/eff1981b983576863947c24891d03a0324b22fc0/port.png" alt="Português" class="w-20 h-20 rounded mr-4 object-cover">
                                 <div>
                                     <h4 class="text-xl font-semibold text-indigo-800">Português</h4>
                                     <p class="text-gray-600 text-sm mt-1">Língua Portuguesa</p>
@@ -512,7 +512,7 @@
                         <!-- Matemática -->
                         <div class="bg-white rounded-lg shadow-sm p-4 hover:shadow-md transition-shadow duration-200 card-enhanced">
                             <div class="flex items-start">
-                                <img src="https://web2.nekoweb.org/novastrilhas/matematica.jpg" alt="Matemática" class="w-20 h-20 rounded mr-4 object-cover">
+                                <img src="https://github.com/zonaeducacional/trilhas/blob/eff1981b983576863947c24891d03a0324b22fc0/Matem%C3%A1tica.png" alt="Matemática" class="w-20 h-20 rounded mr-4 object-cover">
                                 <div>
                                     <h4 class="text-xl font-semibold text-indigo-800">Matemática</h4>
                                     <p class="text-gray-600 text-sm mt-1">Matemática</p>
@@ -530,7 +530,7 @@
                         <!-- Ciências -->
                         <div class="bg-white rounded-lg shadow-sm p-4 hover:shadow-md transition-shadow duration-200 card-enhanced">
                             <div class="flex items-start">
-                                <img src="https://web2.nekoweb.org/novastrilhas/ciencias.jpg" alt="Ciências" class="w-20 h-20 rounded mr-4 object-cover">
+                                <img src="https://github.com/zonaeducacional/trilhas/blob/eff1981b983576863947c24891d03a0324b22fc0/ciencias.png" alt="Ciências" class="w-20 h-20 rounded mr-4 object-cover">
                                 <div>
                                     <h4 class="text-xl font-semibold text-indigo-800">Ciências</h4>
                                     <p class="text-gray-600 text-sm mt-1">Ciências Naturais</p>
@@ -548,7 +548,7 @@
                         <!-- Geografia -->
                         <div class="bg-white rounded-lg shadow-sm p-4 hover:shadow-md transition-shadow duration-200 card-enhanced">
                             <div class="flex items-start">
-                                <img src="https://web2.nekoweb.org/novastrilhas/geografia.jpg" alt="Geografia" class="w-20 h-20 rounded mr-4 object-cover">
+                                <img src="https://github.com/zonaeducacional/trilhas/blob/eff1981b983576863947c24891d03a0324b22fc0/Geografia.png" alt="Geografia" class="w-20 h-20 rounded mr-4 object-cover">
                                 <div>
                                     <h4 class="text-xl font-semibold text-indigo-800">Geografia</h4>
                                     <p class="text-gray-600 text-sm mt-1">Geografia</p>
